@@ -1,6 +1,7 @@
 Unreleased Version 2.2.2-pre
  * Fix: Solve rendering glitches with selection outlines that happen on some systems. Thanks xxxx for reporting.
  * Feature: Allow scaling animation exports. Thanks Hopfel for animating across a giant canvas.
+ * Fix: Allow disabling the application proxy in the network preferences and automatically detect bad proxy configurations that can't actually make connections. Thanks FishEggsThe for reporting.
 
 2024-08-09 Version 2.2.2-beta.3
  * Fix: Use more accurate timers for performance profiles if the platform supports it.
